# zeroserve

./: .gitignore  README.md  ROADMAP.md  main.py  pyproject.toml
githooks/: pre-commit
src/zeroserve/core/: ffn.py  rmsnorm.py  swiglu.py
tests/core/: test_ffn.py  test_rmsnorm.py  test_swiglu.py
