[project]
name = "zeroserve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine != 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine != 'x86_64'" },
]
torchaudio = [
    { index = "pytorch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
    { index = "pypi", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine != 'x86_64'" },
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
